<resources>
    <string name="app_name">BEET IT</string>
    <string name="title_home">Home</string>
    <string name="title_activity_cook_book">CookBookActivity</string>
    <string name="add_button_text">Add</string>
    <string name="item_editText_hint">Add Item</string>
    <string name="checkout_button_text">Checkout</string>
    <string name="cookbook_button">Cookbook</string>
    <string name="pantry_button">Pantry</string>
    <string name="shopping_list_button">Shopping List</string>
    <string name="capture_button_text">Capture</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="add_image_button_text">Add Image</string>
    <string name="r_go_back">Back</string>
    <string name="r_make">Make</string>
    <string name="r_made">Made</string>
    <string name="newInstruction_editText_hint">Add instructions</string>
    <string name="newIngredient_editText_hint">Add ingredient</string>
    <string name="welcome_login_page">BEET IT</string>
    <string name="email_input_field">Email</string>
    <string name="password_input_field">Password</string>
    <string name="login_button">Sign In</string>
    <string name="forget_password">Forget Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_User">Create New Account</string>
    <string name="send_email">Send Request</string>
    <string name="account_recovery">Account Recovery</string>
    <string name="enter_name">Name</string>
    <string name="add_image">Add image</string>
    <string name="add_number"><![CDATA[3–&#190;]]></string>
    <string name="recipe_name">Recipe Name</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_us">About Us</string>
    <string name="hash_tag">No.</string>
    <string name="our_mission">Our Mission</string>
    <string name="text_with_paragraphs">
        We are college students who recognize the difficulty of planning to eat well during
                college.
                \n Our goal is to help you know what you buy, as
                well as keeping track of what foods you have. Plus have your favourite
                food recipe on hand. With this App, you will no
                longer have to worry about forgetting what food is in your cupboard.
    </string>
    <string name="make">Make</string>
    <string name="Developers">Developers</string>
    <string name="steven">Steven Anderson, Computer Science</string>
    <string name="ankita">Ankita Dev, Computer Science</string>
    <string name="eriqua">Eriqua Eisele, Computer Science</string>
</resources>
