<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cs246.recipe.ForgetPassword"
    android:background="@color/blueOfficial">

    <TextView
        android:id="@+id/welcomeForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="57dp"
        android:text="@string/account_recovery"
        android:textAlignment="center"
        android:textColor="@color/blueAqua"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/text_box_corner_login"
        android:ems="10"
        android:hint="@string/email_input_field"
        android:inputType="textEmailAddress|textVisiblePassword"
        android:paddingEnd="0dp"
        android:paddingStart="20dp"
        android:textColor="@color/blueAqua"
        android:textColorHint="@color/blueAqua"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeForgetPassword" />


    <Button
        android:id="@+id/sendEmail"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_light_blue"
        android:padding="10dp"
        android:text="@string/send_email"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_dark_blue"
        android:padding="10dp"
        android:text="@string/login_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/sendEmail"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

</android.support.constraint.ConstraintLayout>
