<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cs246.recipe.SignUp"
    android:background="@color/blueOfficial">

    <TextView
        android:id="@+id/welcomeLoginPage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="57dp"
        android:text="@string/new_User"
        android:textAlignment="center"
        android:textColor="@color/blueAqua"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_above="@+id/passwordInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:background="@drawable/text_box_corner_login"
        android:ems="10"
        android:hint="@string/enter_name"
        android:paddingEnd="0dp"
        android:paddingStart="20dp"
        android:textColor="@color/blueAqua"
        android:textColorHint="@color/blueAqua"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLoginPage" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_above="@+id/passwordInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_box_corner_login"
        android:ems="10"
        android:hint="@string/email_input_field"
        android:inputType="textEmailAddress|textVisiblePassword"
        android:paddingEnd="0dp"
        android:paddingStart="20dp"
        android:textColor="@color/blueAqua"
        android:textColorHint="@color/blueAqua"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_alignStart="@+id/emailInput"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_box_corner_login"
        android:ems="10"
        android:hint="@string/password_input_field"
        android:inputType="textPassword"
        android:paddingEnd="0dp"
        android:paddingStart="20dp"
        android:textColor="@color/blueAqua"
        android:textColorHint="@color/blueAqua"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/button_light_blue"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
