<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:clipToPadding="true"
    android:fillViewport="true"
    android:background="@color/white">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBarView"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">
        </android.support.v7.widget.Toolbar>

        <EditText
            android:id="@+id/recipeName"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/general_input_field"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_create_black_24dp"
            android:ems="10"
            android:hint="@string/recipe_name"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBarView" />


        <EditText
            android:id="@+id/addIngredientField"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/newIngredient_editText_hint"
            android:inputType="text"
            android:background="@drawable/general_input_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeName" />

        <ImageButton
            android:id="@+id/add_ingredient_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:background="@color/blueOfficial"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addIngredientField"
            app:srcCompat="@android:drawable/ic_input_add"
            android:contentDescription="@string/add_button_text" />

        <ListView
            android:id="@+id/listIngredient"
            android:layout_width="358dp"
            android:layout_height="145dp"
            android:layout_marginTop="8dp"
            android:divider="@color/sweetCream"
            android:dividerHeight="6dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/captureButton"
            tools:ignore="NestedScrolling"
            tools:listitem="@layout/ingredient_view" />


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toStartOf="@+id/add_ingredient_button"
            app:layout_constraintTop_toBottomOf="@+id/addIngredientField" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="104dp"
            android:layout_height="44dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/general_input_field"
            android:ems="10"
            android:hint="@string/add_number"
            android:inputType="date"
            app:layout_constraintEnd_toStartOf="@+id/spinner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/addIngredientField"
            app:layout_constraintTop_toBottomOf="@+id/addIngredientField"
            android:drawableStart="@drawable/ic_iso_black_24dp"
            android:drawablePadding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="119dp"
            android:layout_height="110dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/add_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBarView" />

        <Button
            android:id="@+id/captureButton"
            android:layout_width="117dp"
            android:layout_height="43dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/general_button_dark"
            android:padding="5dp"
            android:text="@string/add_image"
            android:textColor="@color/blueAqua"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.031"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/addInstructionsField"
            android:layout_width="356dp"
            android:layout_height="105dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/general_input_field"
            android:ems="10"
            android:hint="@string/newInstruction_editText_hint"
            android:inputType="textMultiLine"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listIngredient" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="192dp"
            android:layout_height="44dp"
            android:layout_marginEnd="1dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/general_button_dark"
            android:padding="5dp"
            android:text="@string/save_button_text"
            android:textColor="@color/blueAqua"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancelButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addInstructionsField"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="192dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/general_button_dark"
            android:padding="5dp"
            android:text="@string/cancel_button_text"
            android:textColor="@color/blueAqua"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addInstructionsField"
            app:layout_constraintVertical_bias="1.0" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>