<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sweetCream"
    android:clipToPadding="true"
    android:fillViewport="true"
    tools:context="cs246.recipe.ShoppingListActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBarView"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">

        </android.support.v7.widget.Toolbar>


        <EditText
            android:id="@+id/item_editText"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/general_input_field"
            android:hint="@string/item_editText_hint"
            android:singleLine="false"
            android:ems="10"
            android:drawableStart="@drawable/ic_create_black_24dp"
            android:drawablePadding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBarView" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="100dp"
            android:layout_height="43dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/general_button_dark"
            android:padding="5dp"
            android:text="@string/add_button_text"
            android:textColor="@color/blueAqua"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.619"
            app:layout_constraintStart_toEndOf="@+id/spinner1"
            app:layout_constraintTop_toBottomOf="@+id/item_editText" />


        <Button
            android:id="@+id/checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/general_button_dark"
            android:padding="10dp"
            android:text="@string/checkout_button_text"
            android:textColor="@color/blueAqua"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/value_editText"
            android:layout_width="100dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/general_input_field"
            android:hint="@string/hash_tag"
            android:drawableStart="@drawable/ic_iso_black_24dp"
            android:drawablePadding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_editText" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="100dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fadingEdgeLength="@dimen/fab_margin"
            android:gravity="center"
            android:spinnerMode="dropdown"
            android:textColorHint="#CFD8DC"
            app:layout_constraintStart_toEndOf="@+id/value_editText"
            app:layout_constraintTop_toBottomOf="@+id/item_editText" />


        <com.baoyz.swipemenulistview.SwipeMenuListView
            android:id="@+id/shoppingList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:divider="@color/sweetCream"
            android:dividerHeight="6dp"
            app:layout_constraintBottom_toTopOf="@+id/checkout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner1"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>